# Beyond2017

./: .gitignore  .ignore  AuditLogTool.txt  AuditLogTool2.txt  AuditLogTool4.txt  C++_Basic_course.pptx  DemoModeProcess.cpp  DemoModeProcess.h  DemoModeTimer.cpp  DemoModeTimer.h  ISpecialModeApplication.h  InControlLightProcess.cpp  InControlLightProcess.h  LGE_VC_TCU4_VDC_SpecialMode_SW 상세설계서(SDD)_v0.1.docx  Makefile.am  README.md  Seminar-Fundamental-GNSS-Simulation-and-Testing.docx  SpecialMode.json  SpecialModeApplication.cpp  SpecialModeApplication.h  SpecialModeApplication_success.h  SpecialModeBaseProcess.cpp  SpecialModeBaseProcess.h  SpecialModeConfigurationReceiver.cpp  SpecialModeConfigurationReceiver.h  SpecialModeDataType.h  SpecialModeEvent.h  SpecialModeHandler.cpp  SpecialModeHandler.h  SpecialModeReceiverManager.cpp  SpecialModeReceiverManager.h  SpecialModeServicesManager.cpp  SpecialModeServicesManager.h  SpecialModeType.h  adb.txt  configure.ac  log.txt
Build-SpecialMode/: Makefile  Makefile.Debug  Makefile.Release
QtProject/: QtProject.pro
SpecialMode/: SpecialMode.pro
ev/: EvApp.cpp  EvApp.h  EvAppHandler.cpp  EvAppHandler.h  Makefile.am  configure.ac
ev/EvAppBinder/: EvAppBinderService.cpp  EvAppBinderService.h  IEvAppBinderService.cpp  IEvAppBinderService.h
ev/EvApplications/EvChargeApp/: EvChargeApp.cpp  EvChargeApp.h  EvChargeApp.inl  EvChargeAppHandler.cpp  EvChargeAppHandler.h  EvChargeAppTimer.cpp  EvChargeAppTimer.h  EvtChargeSettings.cpp  EvtChargeSettings.h  EvtElectricVehicleInformation.cpp  EvtElectricVehicleInformation.h  EvtNextDepartureTimer.cpp  EvtNextDepartureTimer.h
ev/EvApplications/EvClimateApp/: EvClimateApp.cpp  EvClimateApp.h  EvClimateAppHandler.cpp  EvClimateAppHandler.h  EvClimateAppTimer.cpp  EvClimateAppTimer.h  EvtEVPreconditionSettings.h  EvtEVPreconditionStartConfiguration.h  EvtEVPreconditionStatus.cpp  EvtEVPreconditionStatus.h  EvtEvClimateStatus.h
ev/EvApplications/EvHBDApp/: EvHBDApp.cpp  EvHBDApp.h  EvHBDAppHandler.cpp  EvHBDAppHandler.h  EvHBDAppTimer.cpp  EvHBDAppTimer.h  EvtHvBatteryPack.cpp  EvtHvBatteryPack.h
ev/EvApplications/EvLongHorizonApp/: EHApp.cpp  EHApp.h  EHAppHandler.cpp  EHAppHandler.h  EHAppServer.cpp  EHAppServer.h  EHAppTimer.cpp  EHAppTimer.h
ev/EvApplications/EvRangeApp/: EvRangeApp.cpp  EvRangeApp.h  EvRangeAppHandler.cpp  EvRangeAppHandler.h
ev/EvApplications/EvTemplateApp/: EvTemplateApp.cpp  EvTemplateApp.h  README
ev/EvReceiver/: EvIReceiver.h  EvReceiver.h
ev/EvtServiceManager/: EvServiceManager.h  EvtTimer.h
ev/EvtServiceManager/CanService/: EvCanFrame.h  EvCanList.h  EvVifHandler.cpp  EvVifHandler.h  EvVifReceiver.h  EvVifReceiverTx.h  EvtVifManager.cpp  EvtVifManager.h
ev/EvtServiceManager/LCFService/: EvConfigData.cpp  EvConfigData.h  EvConfigDataList.h  EvConfigReceiver.h
ev/EvtServiceManager/NgtpService/: EvNgtpReceiver.h  EvtNgtpMsgManager.cpp  EvtNgtpMsgManager.h
ev/EvtServiceManager/VehicleStatus/: EvDebugReceiver.h  EvDiagReceiver.h  EvPowerModeReceiver.h  EvPowerStateReceiver.h  EvVehicleStatus.cpp  EvVehicleStatus.h
ev/EvtUtil/: EvFileIo.h  EvState.cpp  EvState.h  EvTest.json  EvtServer.h  EvtSingleton.h  EvtUtil.h
ev/boost/include/boost/spirit/home/qi/string/: lit.hpp
property/: specialmode.prop
provisioning/: ConfigDataAckMsg.cpp  ConfigDataAckMsg.h  ConfigRequestMsg.cpp  ConfigRequestMsg.h  FTUpdateMsg.cpp  FTUpdateMsg.h  Makefile.am  NGTPDecodeMsg.cpp  NGTPDecodeMsg.h  ProvisioningApp.cpp  ProvisioningApp.h  Provisioning_Types.h  ServiceDataBase.cpp  ServiceDataBase.h  StatusUpdateAckMsg.cpp  StatusUpdateAckMsg.h  configure.ac
remoteservice/: Makefile.am  RS_EVENT_LIST.h  RS_TYPE.h  RemoteServiceApp.cpp  RemoteServiceApp.h  RemoteServiceAppBase.h  RemoteServiceApp_NGTP.cpp  RemoteServiceApp_Timer.cpp  RemoteServiceApp_Utils.cpp  RemoteServiceApp_Variable.cpp  RemoteServiceApp_canSignals.cpp  RemoteServiceApp_receiveMessage.cpp  RemoteServiceBase.h  RemoteService_RCC.cpp  RemoteService_RCC.h  RemoteService_RES.cpp  RemoteService_RES.h  RemoteService_RISM.cpp  RemoteService_RISM.h  RemoteService_RPC.cpp  RemoteService_RPC.h  RemoteService_RVI.cpp  RemoteService_RVI.h  RemoteService_log.cpp  RemoteService_log.h  configure.ac
remoteservice/property/: remoteservice.prop
specialmode/: ISpecialModeAppInterface.h  Makefile.am  SpecialModeApplication.cpp  SpecialModeApplication.h  SpecialModeBaseProcess.cpp  SpecialModeBaseProcess.h  SpecialModeData_type.h  SpecialModeEvent.h  SpecialModeHandler.cpp  SpecialModeHandler.h  SpecialModeReceiverManager.cpp  SpecialModeReceiverManager.h  SpecialModeServicesManager.cpp  SpecialModeServicesManager.h  SpecialModeType.h  configure.ac
specialmode/process/demomode/: DemoModeProcess.cpp  DemoModeProcess.h  DemoModeTimer.cpp  DemoModeTimer.h
specialmode/process/incontrollight/: InControlLightProcess.cpp  InControlLightProcess.h
template-app/: Makefile.am  TemplateApplication.cpp  TemplateApplication.h  configure.ac  template.json
test/: ConfigurationReceiver_test.cpp  DemoModeBaseProcess_test.cpp  DemoModeProcess_test.cpp  DemoModeTimer_test.cpp  Handler_test.cpp  Makefile.am  ReceiverManager_test.cpp  ServicesManager_test.cpp  SpecialModeApplication_test.cpp  SpecialModeBaseProcess_test.cpp  SpecialModeReceiverManager_test.cpp  SpecialModeServicesManager_test.cpp  configure.ac
test/doubles/: MockApplicationManagerService.h  MockConfigurationManagerService.h  MockNGTPManagerService.h  MockSpecialModeApplication.h  MockSystemManagerService.h  PartialMockHandler.h
test/gmockfused/: custom_main.cpp
test/utils/: makeSp.h
